Replace SpotBugs with Error Prone for compile-time static analysis
- Add Error Prone 2.48.0 as compiler plugin with @CheckReturnValue at package level
- Remove SpotBugs/FindSecBugs plugin and spotbugs-exclude.xml
- Fix unchecked EVP_CIPHER_CTX_ctrl return value in AEAD tag setting
- Fix unchecked return values in GlaSSLessProvider and AbstractMac
- Fix FIPSStatusTest to use return values from queried methods